# BitOpCalc

./: .gitignore  Cargo.toml
src/: app.rs  config.rs  event.rs  main.rs
src/calc/: bit_width.rs  engine.rs  expr_parser.rs  mod.rs
src/input/: expression.rs  handler.rs  mod.rs  real_time.rs
src/ui/: bit_visualizer.rs  header.rs  input_area.rs  layout.rs  mod.rs  mode_bar.rs  result_panel.rs
