[package]
name = "bitopcalc"
version = "0.1.0"
edition = "2021"
description = "A bitwise operation calculator with a terminal UI"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
